hphp/hack/test/typecheck/global_const2.php.exp
File "global_const2.php", line 3, characters 7-9:
Wrong type hint (Typing[4110])
  File "global_const2.php", line 3, characters 7-9:
  Expected `int`
  File "global_const2.php", line 3, characters 15-19:
  But got `vec<nothing>`
